Tentatively save @2x images on iPhone 4 and share them through iTunes

--- a/UIKit_Artwork_Extractor-Info.plist
+++ b/UIKit_Artwork_Extractor-Info.plist
@@ -24,5 +24,7 @@
 	<string>MainWindow</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
