Use some extracted emoji for app and tab bar icons

--- a/UIKit_Artwork_Extractor-Info.plist
+++ b/UIKit_Artwork_Extractor-Info.plist
@@ -8,8 +8,11 @@
 	<string>Extractor</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string>UITabBarFavoritesSelected.png</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon.png</string>
+		<string>Icon@2x.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>ch.pitaya.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
