--- a/UIKit_Artwork_Extractor-Info.plist
+++ b/UIKit_Artwork_Extractor-Info.plist
@@ -19,6 +19,8 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
